<resources>
    <string name="app_name">Cat Info</string>
    <string name="default_description">Default Description</string>
    <string name="title">TITLE</string>
    <string name="description">DESCRIPTION</string>
    <string name="temperament">TEMPERAMENT</string>
    <string name="origin">Origin: </string>
    <string name="life_span">Life Span: </string>
    <string name="breed_characteristics">BREED CHARACTERISTICS</string>
    <string name="wikipedia_url">Wikipedia Url: </string>
    <string name="adaptability">Adaptability</string>
    <string name="social_needs">Social Needs</string>
    <string name="health_issues">Health Issues</string>
    <string name="shedding_level">Shedding Level</string>
    <string name="intelligence">Intelligence</string>
    <string name="affectionate">Affectionate</string>
    <string name="energy_level">Energy Level</string>
    <string name="dog_friendly">Dog Friendly</string>
    <string name="stranger_friendly">Stranger Friendly</string>
    <string name="child_friendly">Child Friendly</string>
    <string name="grooming">Grooming</string>
    <string name="weight">Weight: </string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="favourite">Favourite</string>
    <string name="content_description_favourite">Favourite Cats</string>
    <string name="more">More</string>
    <string name="content_description_more">More Options</string>
    <string name="search">Search</string>
    <string name="content_description_search">Search Cats by Name</string>
    <string name="account">Account</string>
    <string name="cat_image">Cat Image</string>
    <string name="options_subheader_title">Options</string>
    <string name="favourites_title">Favourites</string>
    <string name="header_title">Options</string>
    <string name="header_text">Select an option</string>
    <string name="cats">Cats</string>
    <string name="search_bar">Search by cat\'s name</string>
    <string name="signUpTitle">SIGN UP</string>
    <string name="textSignUp">Enter your Credentials</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="haveAccount">Already have an account?</string>
    <string name="signInTitle">SIGN IN</string>
    <string name="app_name_mayus">CAT INFO</string>
    <string name="textSignIn">Enter your Username and Password</string>
    <string name="dontHaveAccount">Do not have an account?</string>
    <string name="field_empty">Field cannot be empty</string>
    <string name="valid_email">Please enter a valid email address</string>
    <string name="pass_regex_mayus">Password must contain at least one upper case character</string>
    <string name="pass_regex_minus">Password must contain at least one lower case character</string>
    <string name="pass_regex_number">Password must contain at least one number</string>
    <string name="pass_regex_special_char">Password must contain at least one special character</string>
    <string name="pass_regex_spaces">Password cannot contain spaces</string>
    <string name="pass_regex_length">Password must contain at least 8 or more characters</string>
    <string name="user_length">Username must contain at least 4 or more characters</string>
    <string name="password_same">Passwords must be the same in all fields</string>
    <string name="register_failed">Register Failed</string>
    <string name="register_successfully">Register successfully</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="login_failed">Login Failed</string>
    <string name="logout">Logout</string>
</resources>