<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="10dp"
    app:cardElevation="50dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgCat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/default_description"
                    android:scaleType="fitCenter"
                    android:src="#E0CAF6" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCatName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="#EAEAEA" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:layout_margin="10dp"
                        android:text="@string/description"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvTemperament"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:layout_margin="10dp"
                        android:text="@string/temperament"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvOrigin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:layout_margin="10dp"
                        android:text="@string/origin"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvLifeSpan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:layout_margin="10dp"
                        android:text="@string/life_span"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvBreedCharacteristics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:layout_margin="10dp"
                        android:text="@string/breed_characteristics"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvAdaptability"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center|start"
                                    android:layout_marginStart="10dp"
                                    android:layout_marginTop="5dp"
                                    android:text="@string/adaptability"
                                    android:textColor="@color/black"
                                    android:textSize="12sp" />

                                <RatingBar
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:indeterminateOnly="false"
                                    android:scaleX="0.4"
                                    android:scaleY="0.4"
                                    android:numStars="5"
                                    android:rating="5"
                                    android:layout_gravity="center_vertical|start"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvSocialNeeds"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center|start"
                                    android:layout_marginHorizontal="10dp"
                                    android:layout_marginTop="5dp"
                                    android:text="@string/social_needs"
                                    android:textColor="@color/black"
                                    android:textSize="12sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvHealthIssues"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center|start"
                                    android:layout_marginHorizontal="10dp"
                                    android:layout_marginTop="5dp"
                                    android:text="@string/health_issues"
                                    android:textColor="@color/black"
                                    android:textSize="12sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvSheddingLevel"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center|start"
                                    android:layout_marginHorizontal="10dp"
                                    android:layout_marginTop="5dp"
                                    android:text="@string/shedding_level"
                                    android:textColor="@color/black"
                                    android:textSize="12sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvIntelligence"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center|start"
                                    android:layout_marginHorizontal="10dp"
                                    android:layout_marginTop="5dp"
                                    android:text="@string/intelligence"
                                    android:textColor="@color/black"
                                    android:textSize="12sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvAffectionate"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center|start"
                                    android:layout_marginHorizontal="10dp"
                                    android:layout_marginTop="5dp"
                                    android:text="@string/affectionate"
                                    android:textColor="@color/black"
                                    android:textSize="12sp" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvEnergyLevel"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center|start"
                                    android:layout_marginHorizontal="10dp"
                                    android:layout_marginTop="5dp"
                                    android:text="@string/energy_level"
                                    android:textColor="@color/black"
                                    android:textSize="12sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvDogFriendly"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center|start"
                                    android:layout_marginHorizontal="10dp"
                                    android:layout_marginTop="5dp"
                                    android:text="@string/dog_friendly"
                                    android:textColor="@color/black"
                                    android:textSize="12sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvStrangerFriendly"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center|start"
                                    android:layout_marginHorizontal="10dp"
                                    android:layout_marginTop="5dp"
                                    android:text="@string/stranger_friendly"
                                    android:textColor="@color/black"
                                    android:textSize="12sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvChildFriendly"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center|start"
                                    android:layout_marginHorizontal="10dp"
                                    android:layout_marginTop="5dp"
                                    android:text="@string/child_friendly"
                                    android:textColor="@color/black"
                                    android:textSize="12sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvGrooming"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center|start"
                                    android:layout_marginHorizontal="10dp"
                                    android:layout_marginTop="5dp"
                                    android:text="@string/grooming"
                                    android:textColor="@color/black"
                                    android:textSize="12sp" />
                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvWikipediaUrl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:layout_margin="10dp"
                        android:text="@string/wikipedia_url"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="#EAEAEA" />


                <!--<TextView
                    android:id="@+id/btnAccept"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/button_accept"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />-->

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.cardview.widget.CardView>