<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_favourites"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/backgroundColorLightTheme">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout_favourites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/backgroundColorLightTheme"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_favourites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationContentDescription="Toolbar Favourites"
            app:navigationIcon="@drawable/ic_menu_black" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/layoutNoLogged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="73dp"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvDonHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="Log in to your account to view your favorites"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/signInButtonFavourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/signInTitle"
            android:textSize="25sp" />

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh_favourites"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="73dp"
        android:backgroundTint="@color/backgroundColorLightTheme"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColorLightTheme"
            android:backgroundTint="@color/backgroundColorLightTheme"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress_indicator_favourites"
                style="@style/Widget.Material3.LinearProgressIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/backgroundColorLightTheme"
                android:indeterminate="true"
                app:showAnimationBehavior="outward" />

            <LinearLayout
                android:id="@+id/layoutNoInternet_favourites"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/backgroundColorLightTheme"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/noInternetImage_favourites"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:contentDescription="@string/default_description"
                    android:src="@drawable/ic_no_wifi_black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_internet_connection"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/layoutRecyclerView_favourites"
                style="@style/Theme.Material3.Light"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/backgroundColorLightTheme"
                android:backgroundTint="@color/backgroundColorLightTheme"
                android:overScrollMode="never"
                android:visibility="visible"
                tools:listitem="@layout/cat_item" />

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>